fixing Batch and Trigger

--- a/OC_P9/force-app/main/default/classes/UpdateAccountCATest.cls
+++ b/OC_P9/force-app/main/default/classes/UpdateAccountCATest.cls
@@ -1,6 +1,6 @@
 @isTest
 private class UpdateAccountCATest {
-    @isTest static void test() {
+    @isTest static void LoadData() {
         Account acc1 = new Account(Name = 'Test Account 1');
         insert acc1;
 
@@ -24,4 +24,20 @@ private class UpdateAccountCATest {
         OrderItem oi2 = new OrderItem (OrderId = o1.Id, PricebookEntryId = pbe.Id, Quantity=20, UnitPrice = 1000);
         insert oi2;        
     }
+/*
+    @isTest static void Positive_UpdateAccountCA_Test() {
+        LoadData();
+        test.startTest();
+        // code de test.
+        test.stopTest();
+        System.assertEquals();
+    }
+    @isTest static void Negative_UpdateAccountCA_Test() {
+        System.assertNotEquals();
+    }
+    static testMethod void Bulk_UpdateAccountCA_Test(){
+        
+
+    }
+    */
 }
