--- a/OC_P9/force-app/main/default/classes/TestUpdateAllAccounts.cls
+++ b/OC_P9/force-app/main/default/classes/TestUpdateAllAccounts.cls
@@ -1,5 +1,5 @@
 @isTest
-private class TestUpdateAccountCA {
+private class TestUpdateAllAccounts {
     @TestSetup
      static void Setup() {
         Account acc1 = new Account(Name = 'Test Account 1');
