--- a/OC_P9/force-app/main/default/classes/TestUpdateAllAccounts.cls
+++ b/OC_P9/force-app/main/default/classes/TestUpdateAllAccounts.cls
@@ -2,30 +2,7 @@
 private class TestUpdateAllAccounts {
     @TestSetup
      static void Setup() {
-        Account acc1 = new Account(Name = 'Test Account 1');
-        insert acc1;
-
-        Product2 pd1 = new Product2(Name = 'Chemise Verte longue XYX', Family = 'Chemise');
-        Insert pd1;
-         
-        Id pricebookId = Test.getStandardPricebookId();
-        //Create the PricebookEntry
-        PricebookEntry pbe = new PricebookEntry(
-            Pricebook2Id = pricebookId,
-            Product2Id = pd1.Id,
-            UnitPrice = 1020,
-            IsActive = true
-        );
-        Insert pbe;
-
-        Order o1 = new Order(AccountId = acc1.Id, EffectiveDate=System.today() + 5,
-                status='Ordered', Pricebook2Id = pricebookId);
-        insert o1;
-
-        OrderItem oi1 = new OrderItem (OrderId = o1.Id, PricebookEntryId = pbe.Id, Quantity=10, UnitPrice = 150);
-        insert oi1;
-        OrderItem oi2 = new OrderItem (OrderId = o1.Id, PricebookEntryId = pbe.Id, Quantity=20, UnitPrice = 1000);
-        insert oi2;        
+        TestUtils.LoadData();       
     }
 
     @isTest public static void test() {
