--- a/OC_P9/force-app/main/default/classes/TestUpdateAllAccounts.cls
+++ b/OC_P9/force-app/main/default/classes/TestUpdateAllAccounts.cls
@@ -1,17 +1,18 @@
 @isTest
 private class TestUpdateAllAccounts {
     @TestSetup
-     static void Setup() {
-        TestUtils.LoadData();       
+    static void Setup() {
+        TestUtils.LoadData(200, 'Ordered');
     }
 
-    @isTest public static void test() {
+    @isTest
+    public static void test() {
         Test.startTest();
         UpdateAllAccounts uca = new UpdateAllAccounts();
         Id batchId = Database.executeBatch(uca);
         Test.stopTest();
         // after the testing stops, assert records were updated properly
         Account a = [SELECT chiffre_d_affaire__c FROM Account LIMIT 1];
-        System.assertEquals(150*10+20*1000,a.chiffre_d_affaire__c);
+        System.assertEquals(150 * 10 + 20 * 1000, a.chiffre_d_affaire__c);
     }
 }
