--- a/OC_P9/force-app/main/default/classes/UpdateAllAccounts.cls
+++ b/OC_P9/force-app/main/default/classes/UpdateAllAccounts.cls
@@ -1,17 +1,17 @@
-global class UpdateAllAccounts implements Database.Batchable<sObject>{
-    
-    global Database.QueryLocator start(Database.BatchableContext info){ 
+global class UpdateAllAccounts implements Database.Batchable<sObject> {
+    global Database.QueryLocator start(Database.BatchableContext info) {
         //Requeter seulement les comptes qui ont au moins une commande avec le Status 'Ordered'
-        return Database.getQueryLocator('SELECT Id, chiffre_d_affaire__c,'+
-        '(select id from Orders where Status=\'Ordered\') FROM Account');
- 
+        return Database.getQueryLocator(
+            'SELECT Id, chiffre_d_affaire__c,' +
+            '(select Id, TotalAmount, Status from Orders where Status=\'Ordered\') FROM Account'
+        );
     }
-     
-    global void execute(Database.BatchableContext info, List<Account> scope){
+
+    global void execute(Database.BatchableContext info, List<Account> scope) {
+        System.debug('scope size = ' + scope.size());
         AccountService.updateChiffreAffaire(scope);
-    }    
-     
-    global void finish(Database.BatchableContext info){     
-        
-    } 
- }
+    }
+
+    global void finish(Database.BatchableContext info) {
+    }
+}
