--- a/OC_P9/force-app/main/default/classes/MyTeamOrdersController.cls
+++ b/OC_P9/force-app/main/default/classes/MyTeamOrdersController.cls
@@ -1,6 +1,5 @@
 public without sharing class MyTeamOrdersController {
-    public AggregateResult[] getSumOrders(){
-       return OrderService.getOrders();
+    public AggregateResult[] getSumOrders() {
+        return OrderService.getOrdersTotalAmountByCommercial();
     }
-    
 }
