--- a/OC_P9/force-app/main/default/classes/TestMyTeamOrdersController.cls
+++ b/OC_P9/force-app/main/default/classes/TestMyTeamOrdersController.cls
@@ -1,5 +1,13 @@
+@isTest
 public with sharing class TestMyTeamOrdersController {
-    public TestMyTeamOrdersController() {
+    @TestSetup
+    static void makeData() {
+        TestDataFactory.LoadData(100, 'Ordered');
+    }
 
+    @isTest
+    public static void testDisplay() {
+        PageReference pageRef = Page.OrderCommercial;
+        Test.setCurrentPage(pageRef);
     }
 }
